<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:background="@color/lightBlue"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/from" />

        <TextView
            android:id="@+id/from"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/to" />

        <TextView
            android:id="@+id/to"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/due_date" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/constant_symbol" />

        <TextView
            android:id="@+id/constantSymbol"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>

</LinearLayout>



